--- a/modules/topics/client/views/topic-edit.html
+++ b/modules/topics/client/views/topic-edit.html
@@ -10,48 +10,38 @@
 
 	<div class="view-body-container">
 		<div class="row">
-			<div class="col-sm-9">
-				<div class="form-group" x-show-errors>
-					<label for="title" class="control-label">Name</label>
-					<input id="title" name="name" type="text" class="form-control" ng-model="topic.name" required>
-						<div ng-messages="topicForm.name.$error" role="alert">
-							<p class="help-block error-text" ng-message="required">Valued Component name is required.</p>
-						</div>
+			<div class="col-md-4 form-group" x-show-errors>
+				<label for="title" class="control-label">Title</label>
+				<input id="title" name="name" type="text" class="form-control" ng-model="topic.name" required>
+				<div ng-messages="topicForm.name.$error" role="alert">
+					<p class="help-block error-text" ng-message="required">Valued Component name is required.</p>
 				</div>
 			</div>
-			<div class="col-sm-3">
-				<div class="form-group">
-					<label for="type" class="control-label">Type</label>
-					<select id="type" ng-model='topic.type' class="form-control">
-						<option>Valued Component</option>
-						<option>Pathway Component</option>
-					</select>
+			<div class="col-md-4 form-group" x-show-errors>
+				<label for="pillar" class="control-label">Pillar</label>
+				<select ng-change="selectTopic(pillar)" id="pillar" name="pillar" ng-model='topic.pillar' class="form-control" ng-options="pillar.id as pillar.title for pillar in pillars" required></select>
+				<div ng-messages="topicForm.pillar.$error" role="alert">
+					<p class="help-block error-text" ng-message="required">Pillar is required.</p>
 				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="form-group">
-					<label for="shortDesc" class="control-label">Description</label>
-					<textarea id="shortDesc" type="text" class="form-control" ng-model="topic.description" rows=6></textarea>
-				</div>
+			<div class="col-md-4 form-group">
+				<label for="parent" class="control-label">Parent Valued Component</label>
+				<select id="parent" ng-model='topic.parent' class="form-control" ng-options="topic.code as topic.name for topic in pillartopics"><option></option></select>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group" x-show-errors>
-					<label for="pillar" class="control-label">Pillar</label>
-					<select ng-change="selectTopic(pillar)" id="pillar" name="pillar" ng-model='topic.pillar' class="form-control" ng-options="pillar.id as pillar.title for pillar in pillars" required></select>
-					<div ng-messages="topicForm.pillar.$error" role="alert">
-						<p class="help-block error-text" ng-message="required">Pillar is required.</p>
-					</div>
-				</div>
+			<div class="col-sm-4 form-group">
+				<label for="type" class="control-label">Type</label>
+				<select id="type" ng-model='topic.type' class="form-control">
+					<option>Valued Component</option>
+					<option>Pathway Component</option>
+				</select>
 			</div>
-			<div class="col-sm-6">
-				<div class="form-group">
-					<label for="parent" class="control-label">Parent Valued Component</label>
-					<select id="parent" ng-model='topic.parent' class="form-control" ng-options="topic.code as topic.name for topic in pillartopics"><option></option></select>
-				</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-12 form-group">
+				<label for="shortDesc" class="control-label">Description</label>
+				<textarea id="shortDesc" type="text" class="form-control" ng-model="topic.description" rows=6></textarea>
 			</div>
 		</div>
 	</div><!-- / VIEW BODY CONTAINER -->
