--- a/modules/topics/client/views/topic-modal-select.html
+++ b/modules/topics/client/views/topic-modal-select.html
@@ -2,7 +2,7 @@
 <div class="select-topic-modal">
 
 	<div class="modal-header">
-		<h3 class="modal-title">Add Topic(s)</h3>
+		<h3 class="modal-title">Add Valued Component(s)</h3>
 	</div>
 	<div class="modal-body">
 		<section class="panel panel-default">
