Changing name/title on vc picker/linker.

--- a/modules/vcs/client/views/vc-picker.html
+++ b/modules/vcs/client/views/vc-picker.html
@@ -4,7 +4,7 @@
 <div class="modal-body">
 	<ul class="list-group check-list">
 		<li class="list-group-item" ng-repeat="vc in s.vcs" ng-click="s.dealwith (vc)">
-			<input type="checkbox" ng-checked="s.findById(vc._id) != -1"></input>{{ vc.name }} ({{ vc.pillar }})
+			<input type="checkbox" ng-checked="s.findById(vc._id) != -1"></input>{{ vc.title }} ({{ vc.pillar }})
 		</li>
 	</ul>
 </div>
