--- a/modules/artifacts/client/views/artifact-executive.html
+++ b/modules/artifacts/client/views/artifact-executive.html
@@ -1,27 +1,24 @@
-<h1 class="page-title">
-	Executive Approval of {{artifact.name}} ({{artifact.version}}) for {{ project.name }}
-</h1>
 
-<!-- <div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div> -->
-
-<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
-
-<div class="panel panel-default">
-	<div class="panel-body">
-
-		<h3>Approval / Rejection Note</h3>
-		<div class="form-group">
-			<textarea rows="10" class="form-control" ng-model="artifact.approvalnote"></textarea>
-		</div>
-		<div class="text-right">
-			<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
-			<a class="btn btn-default" ng-click="reject()">Reject and return for {{buttons.prev}}</a>
-			<a class="btn btn-success" ng-click="submit()">Accept for {{buttons.next}}</a>
-		</div>
-	</div>
+<div class="view-title-container">
+	<h1>{{artifact.name}} ({{artifact.version}})<label class="label label-info">Executive Approval</label></h1>
 </div>
 
-<div ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
-
-<div ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
+<div class="view-body-container">
+	<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
+	<div class="panel panel-default">
+		<div class="panel-body">
+			<h3>Approval / Rejection Note</h3>
+			<div class="form-group">
+				<textarea rows="10" class="form-control" ng-model="artifact.approvalnote"></textarea>
+			</div>
+			<div class="text-right">
+				<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
+				<a class="btn btn-default" ng-click="reject()">Reject and return for {{buttons.prev}}</a>
+				<a class="btn btn-success" ng-click="submit()">Accept for {{buttons.next}}</a>
+			</div>
+		</div>
+	</div>
+	<div ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
+	<div ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
+</div>
 
